--- a/example2/Makefile
+++ b/example2/Makefile
@@ -3,13 +3,16 @@
 # settings and rules.
 
 # library name
-lib.name = externals.howto.example2
+lib.name = examples
 
 # input source file (class name == source file basename)
 class.sources = counter.c
 
 # all extra files to be included in binary distribution of the library
 datafiles =
+
+# installation directory
+PDLIBDIR = /home/schmidh/Documents/Pd/externals
 
 # include Makefile.pdlibbuilder from submodule directory 'pd-lib-builder'
 PDLIBBUILDER_DIR=../pd-lib-builder/
